<resources>
    <string name="app_name">TameMind</string>
    <string name="hello_world">Hello world</string>
    <string name="select_time">Select Time</string>
    <string name="startTime" translatable="false">0:00</string>
    <string name="feed">Feed</string>

    <string name="mainMenu">Home</string>
    <string name="farmMenu">Farm</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="start_farmnig_today">Start farming today!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authorization">Authorization</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="submit">Submit</string>
    <string name="insert_pin">Insert PIN</string>
    <string name="enter_your_pin">Enter your pin code</string>
    <string name="pin_advice">PIN must contain 4 numbers</string>
    <string name="No_access">Limited Access</string>
    <string name="return_toMainActivity">Return</string>
    <string name="settings">Settings</string>
    <string name="end_timer">End timer</string>
    <string name="android_app">android app</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="AllowedApps">Allowed applications:</string>
    <string name="animal">Animal</string>
    <string name="your_farm">Your farm</string>
    <string name="elephant">Elephant</string>
    <string name="cow">Cow</string>
    <string name="chicken">Chicken</string>
    <string name="mouse">Mouse</string>
    <string name="control_your_time_accurately">Control your time accurately</string>
    <string name="language_en">Language: EN</string>
    <string name="choose_language">Choose language</string>


    <string name="stop_phubbing_">Stop phubbing</string>
    <string name="return_to_your_work_">Return to your work</string>
    <string name="do_not_use_your_phone_">Do not use your phone!</string>
    <string name="put_your_phone_down_">Put your phone down!</string>
    <string name="focus_on_your_tasks_">Focus on your tasks!</string>
    <string name="stay_productive_">Stay productive!</string>
    <string name="break_the_phone_habit_">Break the phone habit!</string>
    <string name="time_to_work_not_scroll_">Time to work, not scroll!</string>
    <string name="don_t_let_your_phone_distract_you_">Do not let your phone distract you!</string>
    <string name="stay_focused_stay_sharp_">Stay focused, stay sharp!</string>
    <string name="your_work_needs_you_more_">Your work needs you more!</string>
    <string name="eyes_on_your_goals_not_your_screen_">Eyes on your goals, not your screen!</string>
    <string name="be_present_not_distracted_">Be present, not distracted!</string>
    <string name="focus_session_over">Focus session over</string>
    <string name="success">Success!</string>
    <string name="the_end_of_feeding_process">The end of feeding process</string>

    <string name="focus_notification_title">Focus mode</string>
    <string name="time_left_notification_text">Remains: %s</string>
    <string name="stop_timer_action_text">Stop</string>

    <string name="no_allowed_apps">No allowed apps</string>
    <string name="add_app_upper">Add app upper</string>
    <string name="allowed_apps_desc">Add apps that can be used during the focus session</string>
    <string name="manage_apps">Manage applications</string>

    <string name="progress_to_next_level">Progress to next level</string>
    <string name="total_focus_time">Total Focus Time</string>
    <string name="keep_going_next_animal">Keep going to unlock the next animal!</string>
    <string name="every_minute_feeds">Every minute of focus feeds your animal!</string>
    <string name="amazing_progress">Amazing progress! Your animal is thriving!</string>
    <string name="great_progress_halfway">Great progress! You\'re halfway there!</string>
    <string name="almost_there_next_level">Almost there! Next level is so close!</string>
    <string name="your_dedication_growing">Your dedication is growing your farm!</string>
    <string name="focus_more_evolve">Focus more to evolve your companion!</string>
    <string name="_0">0%</string>
    <string name="_0h_0m">0h 0m</string>

    <string name="your_progress_reduced">Your progress is reduced by half over the early stop of the timer</string>
    <string name="penalty">Penalty!</string>

    <string name="service_stopped">Service stopped</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="pin_is_established">PIN established</string>

    <string name="timer_history">History</string>
    <string name="statistics">Statistics</string>
    <string name="total_sessions">%d</string>
    <string name="total_sessions_label">Sessions</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="session_history">Session History</string>
    <string name="clear">Clear</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_confirmation">Are you sure you want to clear all session history? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="no_sessions_yet">No completed sessions yet.\nStart a timer and complete it to see your history!</string>
    <string name="open_menu">Open menu</string>
    <string name="nav_history">History</string>
    <string name="_0m" translatable="false">0m</string>
    <string name="fox">Fox</string>
    <string name="purchase">Purchase</string>
    <string name="earn_coins_by_focusing">Earn coins by focusing</string>
    <string name="your_focus_coins">Your focus coins</string>
    <string name="shop">Shop</string>
    <string name="owned">Owned</string>
    <string name="available_animals">Available animals</string>
    <string name="__0">0</string>
    <string name="already_owned">Already owned</string>
    <string name="confirm_purchase">Confirm purchase</string>
    <string name="purchase_confirmation">Want to buy %1$s per %2$s coin?</string>
    <string name="purchase_successful">%1$s successfully purchased!</string>
    <string name="insufficient_funds_title">Insufficient funds</string>
    <string name="insufficient_funds">You need more than %1$s coins for this purchase</string>
    <string name="ok" translatable="false">OK</string>
    <string name="session_completed_with_coins">Session completed! You got %d coins</string>
    <string name="penalty_with_coins">Progress is reduced. Lost %d coins for early completion.</string>
    <string name="hedgehog">Hedgehog</string>

    <string name="select_animal">Select animal</string>
    <string name="change_animal">Change animal</string>
    <string name="no_animals_title">No animals</string>
    <string name="no_animals_message">You don\'t have any unlocked animals yet. Buy them in the shop!</string>
    <string name="go_to_shop">Go to shop</string>
    <string name="animal_selected">%s selected for farm</string>

    <string name="standard_mode">Standard Mode</string>
    <string name="strict_mode">Strict Mode</string>
    <string name="select_mode">Select Mode</string>

    <string name="please_allow_access_usm">Please allow access to usage statistics</string>

    <string name="strict_mode_active">Strict mode is active</string>
    <string name="overlay_message">This app is blocked</string>

    <string name="app_blocked">App is blocked</string>
    <string name="this_app_is_blocked">This app is currently blocked</string>

    <string name="overlay_permission_title">Permission required</string>
    <string name="overlay_permission_message">Strict mode requires permission to draw over other apps. Go to settings?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>


</resources>